@@ -26,7 +26,7 @@ typedef struct urlelem_t {
 } urlelem_t;
 
 enum webtesttype_t { 
-	WEBTEST_PLAIN, WEBTEST_CONTENT, WEBTEST_CONT, WEBTEST_NOCONT, WEBTEST_POST, WEBTEST_NOPOST, WEBTEST_TYPE, WEBTEST_STATUS, WEBTEST_HEAD, WEBTEST_SOAP, WEBTEST_NOSOAP,
+	WEBTEST_PLAIN, WEBTEST_CONTENT, WEBTEST_CONT, WEBTEST_CONTONLY, WEBTEST_NOCONT, WEBTEST_DATA, WEBTEST_DATAONLY, WEBTEST_DATASVC, WEBTEST_CLIENTHTTP, WEBTEST_CLIENTHTTPONLY, WEBTEST_CLIENTHTTPSVC, WEBTEST_POST, WEBTEST_NOPOST, WEBTEST_TYPE, WEBTEST_STATUS, WEBTEST_HEAD, WEBTEST_SOAP, WEBTEST_NOSOAP,
 };
 
 typedef struct weburl_t {
