@@ -134,6 +134,7 @@ typedef struct testitem_t {
 	int		alwaystrue;	/* "~testname" flag */
 	int		silenttest;	/* "testname:s" flag */
 	int             senddata;       /* For tests that merely generate a "data" report */
+	int             sendclient;       /* For tests that merely generate a "client" pseudo-status report */
 	char		*srcip;
 
 	/* These data may be filled in from the test engine private data */
